--- a/Athan/ex18.ipynb
+++ b/Athan/ex18.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from misc_utils import *\n",
+    "\n",
+    "N = 1000  # global variable for number of trials being use to generate random variables"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -9,7 +22,281 @@
     "\n",
     "Unblockable backdoor path. Frontdoor path cannot be blocked either: unable to use rule 1 or rule 2 ($y \\not\\perp z_1$, and there are no variables on which we can condition to make the two independent).\n",
     "\n",
-    "**Graph 2:**"
+    "**Graph 2:**\n",
+    "\n",
+    "Blocking the backdoor path:\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "P(y | \\hat{x}, z_1) &= \\sum_{z_3}P(y | \\hat{x}, z_1, z_3)P(z_3 | \\hat{x}, z_1) && \\text{(condition on $z_3$)}\\\\\n",
+    "    &= \\sum_{z_3}P(y | \\hat{x}, \\hat{z_1}, z_3)P(z_3 | \\hat{x}, \\hat{z_1}) && \\text{(rule 2 on $z_1$)}\\\\\n",
+    "    &= \\sum_{z_3}P(y | \\hat{z_1}, z_3)P(z_3 | \\hat{z_1}) && \\text{(rule 3 on $\\hat{x}$ in both terms)}\\\\\n",
+    "    &= \\sum_{z_3}P(y, z_3 | \\hat{z_1}) && \\text{(definition of conditional probability)}\\\\\n",
+    "    &= P(y | \\hat{z_1}) && \\text{(un-condition on $z_3$)}\\\\\n",
+    "    &= P(y) && \\text{(rule 3 on $z_1$)}\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Using the formula $P(y | \\hat{x}, z_1) = \\frac{P(y, z_1 | \\hat{x})}{P(z_1 | \\hat{x})}$, we evaluate the numerator and denominator separately:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "P(y, z_1 | \\hat{x}) &= \\sum_{z_3} P(y, z_1 | \\hat{x}, z_3)P(z_3 | \\hat{x}) && \\text{(condition on $z_3$)}\\\\\n",
+    "    &= \\sum_{z_3} P(y | \\hat{x}, z_1, z_3)P(z_1 | \\hat{x}, z_3)P(z_3) && \\text{(product rule, rule 3 on $\\hat{x}$)}\\\\\n",
+    "    &= \\sum_{z_3} P(y | z_3)P(z_1 | x, z_3)P(z_3) && \\text{(based on working above, rule 2 on $\\hat{x}$)}\\\\[20pt]\n",
+    "P(z_1 | \\hat{x}) &= \\sum_{z_3} P(z_1 | \\hat{x}, z_3)P(z_3 | \\hat{x})\\\\\n",
+    "    &= \\sum_{z_3} P(z_1 | x, z_3)P(z_3)\\\\\n",
+    "    &= \\sum_{z_3} P(z_1, z_3 | x)\\\\\n",
+    "    &= P(z_1 | x)\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "We can demonstrate that these two results are equal. We start by generating random variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z1</th>\n",
+       "      <th>z2</th>\n",
+       "      <th>z3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     x  y  z1  z2  z3\n",
+       "0    1  1   0   1   0\n",
+       "1    1  0   1   0   1\n",
+       "2    1  1   0   1   1\n",
+       "3    1  1   0   1   0\n",
+       "4    0  1   1   1   0\n",
+       "..  .. ..  ..  ..  ..\n",
+       "995  1  1   0   1   1\n",
+       "996  1  1   0   1   1\n",
+       "997  1  0   1   0   1\n",
+       "998  0  0   1   1   1\n",
+       "999  1  1   0   1   0\n",
+       "\n",
+       "[1000 rows x 5 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Start with z3\n",
+    "z3_list = np.random.rand(N)\n",
+    "z3_list = np.vectorize(lambda x: 1 if x > 0.4 else 0)(z3_list)  # P(z3 = 1) = 0.6\n",
+    "\n",
+    "# x and y\n",
+    "x = []\n",
+    "y = []\n",
+    "\n",
+    "for z3 in z3_list:\n",
+    "    if z3 == 0:\n",
+    "        x.append(1 if np.random.rand() > 0.7 else 0)   #P(x = 1|z3 = 0) = 0.3\n",
+    "        y.append(1 if np.random.rand() > 0.25 else 0)  #P(y = 1|z3 = 0) = 0.75\n",
+    "    else:\n",
+    "        x.append(1 if np.random.rand() > 0.3 else 0)   #P(x = 1|z3 = 1) = 0.7\n",
+    "        y.append(1 if np.random.rand() > 0.55 else 0)  #P(y = 1|z3 = 1) = 0.45\n",
+    "\n",
+    "x_list = np.array(x)\n",
+    "y_list = np.array(y)\n",
+    "\n",
+    "# z2\n",
+    "z2 = []\n",
+    "for y in y_list:\n",
+    "    if y == 0:\n",
+    "        z2.append(1 if np.random.rand() > 0.5 else 0)  #P(z_2 = 1|y = 0) = 0.5\n",
+    "    else:\n",
+    "        z2.append(1 if np.random.rand() > 0.1 else 0)  #P(z_2 = 1|y = 1) = 0.9\n",
+    "z2_list = np.array(z2)\n",
+    "\n",
+    "# z1\n",
+    "z1 = []\n",
+    "for prod in zip(x_list, z2_list):\n",
+    "    if prod == (0, 0):\n",
+    "        z1.append(1 if np.random.rand() > 0.3 else 0)   #P(z_1 = 1|x = 0, z2 = 0) = 0.7\n",
+    "    elif prod == (0, 1):\n",
+    "        z1.append(1 if np.random.rand() > 0.15 else 0)  #P(z_1 = 1|x = 0, z2 = 1) = 0.85\n",
+    "    elif prod == (1, 0):\n",
+    "        z1.append(1 if np.random.rand() > 0.7 else 0)   #P(z_1 = 1|x = 1, z2 = 0) = 0.3\n",
+    "    elif prod == (1, 1):\n",
+    "        z1.append(1 if np.random.rand() > 0.95 else 0)  #P(z_1 = 1|x = 1, z2 = 1) = 0.05\n",
+    "    else:\n",
+    "        raise ValueError(f\"Invalid cartesian product: {prod}.\")\n",
+    "z1_list = np.array(z1)\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    \"x\": x_list,\n",
+    "    \"y\": y_list,\n",
+    "    \"z1\": z1_list,\n",
+    "    \"z2\": z2_list,\n",
+    "    \"z3\": z3_list\n",
+    "})\n",
+    "\n",
+    "display(df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now proceed with the calculations. We will calculate $P(y = 1 | \\hat{x}, z_1)$ for all combinations of $\\hat{x}$ and $z_1$. Since this is equivlent to $P(y)$ these should, in principle, all be the same."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(y = 1) = 0.565 with N = 1000\n",
+      "P(y = 1, z1 = 0 | do(x = 0)) / P(z1 = 0 | do(x = 0)) = 0.5665283759328169 with N = 1000\n",
+      "P(y = 1, z1 = 1 | do(x = 0)) / P(z1 = 1 | do(x = 0)) = 0.5646829432905327 with N = 1000\n",
+      "P(y = 1, z1 = 0 | do(x = 1)) / P(z1 = 0 | do(x = 1)) = 0.5672772038567493 with N = 1000\n",
+      "P(y = 1, z1 = 1 | do(x = 1)) / P(z1 = 1 | do(x = 1)) = 0.5472231182795698 with N = 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We start with P(y = 1) (the first solution):\n",
+    "p_y = cond_prob(df, {\"y\": 1})\n",
+    "print(f\"P(y = 1) = {p_y} with N = {N}\")\n",
+    "\n",
+    "# We proceed with the second solution:\n",
+    "for (x, z1) in [(0, 0), (0, 1), (1, 0), (1, 1)]:\n",
+    "    denominator = cond_prob(df, {\"z1\": z1}, {\"x\": x})\n",
+    "\n",
+    "    numerator = 0\n",
+    "    for z3 in [0, 1]:\n",
+    "        numerator += (cond_prob(df, {\"y\": 1, \"z3\": z3}) * cond_prob(df, {\"z1\": z1}, {\"x\": x, \"z3\": z3}))\n",
+    "\n",
+    "    print(f\"P(y = 1, z1 = {z1} | do(x = {x})) / P(z1 = {z1} | do(x = {x})) = {numerator / denominator} with N = {N}\")\n",
+    "\n",
+    "# It works!"
    ]
   },
   {
@@ -27,8 +314,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0 (main, Mar  1 2023, 12:33:14) [Clang 14.0.6 ]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
