ex18.2, now with misc_utils

--- a/Athan/ex18.ipynb
+++ b/Athan/ex18.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,26 +89,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -121,11 +121,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -137,8 +137,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>995</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -146,7 +146,7 @@
        "    <tr>\n",
        "      <th>996</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -154,26 +154,26 @@
        "    <tr>\n",
        "      <th>997</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -182,17 +182,17 @@
       ],
       "text/plain": [
        "     x  y  z1  z2  z3\n",
-       "0    1  1   0   1   0\n",
-       "1    1  0   1   0   1\n",
-       "2    1  1   0   1   1\n",
+       "0    0  1   0   0   0\n",
+       "1    1  0   0   1   0\n",
+       "2    1  0   1   0   1\n",
        "3    1  1   0   1   0\n",
-       "4    0  1   1   1   0\n",
+       "4    1  1   0   1   1\n",
        "..  .. ..  ..  ..  ..\n",
-       "995  1  1   0   1   1\n",
-       "996  1  1   0   1   1\n",
-       "997  1  0   1   0   1\n",
-       "998  0  0   1   1   1\n",
-       "999  1  1   0   1   0\n",
+       "995  0  0   0   1   1\n",
+       "996  1  0   0   1   1\n",
+       "997  1  1   0   1   1\n",
+       "998  0  1   1   1   0\n",
+       "999  1  0   0   1   1\n",
        "\n",
        "[1000 rows x 5 columns]"
       ]
@@ -266,22 +266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(y = 1) = 0.565 with N = 1000\n",
-      "P(y = 1, z1 = 0 | do(x = 0)) / P(z1 = 0 | do(x = 0)) = 0.5665283759328169 with N = 1000\n",
-      "P(y = 1, z1 = 1 | do(x = 0)) / P(z1 = 1 | do(x = 0)) = 0.5646829432905327 with N = 1000\n",
-      "P(y = 1, z1 = 0 | do(x = 1)) / P(z1 = 0 | do(x = 1)) = 0.5672772038567493 with N = 1000\n",
-      "P(y = 1, z1 = 1 | do(x = 1)) / P(z1 = 1 | do(x = 1)) = 0.5472231182795698 with N = 1000\n"
+      "P(y = 1) = 0.577 with N = 1000\n",
+      "P(y = 1, z1 = 0 | do(x = 0)) / P(z1 = 0 | do(x = 0)) = 0.5990684931506849 with N = 1000\n",
+      "P(y = 1, z1 = 1 | do(x = 0)) / P(z1 = 1 | do(x = 0)) = 0.572782722513089 with N = 1000\n",
+      "P(y = 1, z1 = 0 | do(x = 1)) / P(z1 = 0 | do(x = 1)) = 0.5831343380795175 with N = 1000\n",
+      "P(y = 1, z1 = 1 | do(x = 1)) / P(z1 = 1 | do(x = 1)) = 0.5373368825543516 with N = 1000\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
     "# We start with P(y = 1) (the first solution):\n",
     "p_y = cond_prob(df, {\"y\": 1})\n",
     "print(f\"P(y = 1) = {p_y} with N = {N}\")\n",
@@ -289,10 +290,7 @@
     "# We proceed with the second solution:\n",
     "for (x, z1) in [(0, 0), (0, 1), (1, 0), (1, 1)]:\n",
     "    denominator = cond_prob(df, {\"z1\": z1}, {\"x\": x})\n",
-    "\n",
-    "    numerator = 0\n",
-    "    for z3 in [0, 1]:\n",
-    "        numerator += (cond_prob(df, {\"y\": 1, \"z3\": z3}) * cond_prob(df, {\"z1\": z1}, {\"x\": x, \"z3\": z3}))\n",
+    "    numerator = sum_over_var(df, [\"z3\"], [({\"y\": 1, \"z3\": -1}, None), ({\"z1\": z1}, {\"x\": x, \"z3\": z3})])\n",
     "\n",
     "    print(f\"P(y = 1, z1 = {z1} | do(x = {x})) / P(z1 = {z1} | do(x = {x})) = {numerator / denominator} with N = {N}\")\n",
     "\n",
@@ -323,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.8"
   },
   "orig_nbformat": 4,
   "vscode": {
